fix: alignment of votes and icons within notes of the stack view (#3908)

--- a/src/components/NoteDialogComponents/NoteDialogHeader.scss
+++ b/src/components/NoteDialogComponents/NoteDialogHeader.scss
@@ -14,6 +14,7 @@
   display: flex;
   justify-content: center;
   align-items: flex-end;
+  flex-shrink: 0;
 
   h2 {
     width: max-content;
