--- a/src/components/Votes/VoteButtons/AddVoteButton.scss
+++ b/src/components/Votes/VoteButtons/AddVoteButton.scss
@@ -6,14 +6,17 @@
   justify-content: center;
   align-items: center;
 
-  height: var(--note-footer-height, $votes-button-size);
-  width: var(--note-footer-height, $votes-button-size);
+  height: 32px;
+  width: 32px;
 
   background-color: var(--accent-color--desaturated-light);
   color: var(--accent-color);
-  transition: background-color 150ms ease-in-out, color 150ms ease-in-out;
-
-  filter: drop-shadow(0 4px 3px rgba(var(--accent-color-rgb), 0.48));
+  transition:
+    background-color 80ms ease-in-out,
+    color 80ms ease-in-out;
+  box-shadow:
+    0 1px 3px 0 rgba(var(--accent-color-rgb), 0.1),
+    0 1px 2px -1px rgba(var(--accent-color-rgb), 0.1);
 }
 .vote-button-add:disabled {
   opacity: 0.5;
