--- a/src/routes/StackView/StackView.scss
+++ b/src/routes/StackView/StackView.scss
@@ -2,7 +2,6 @@
 
 $stack-view__header-height: 14vh;
 $stack-view__navigation-height: 14vh;
-$stack-view__parent-note-height: 22vh;
 $stack-view__min-height: 82px;
 
 .stack-view__portal {
@@ -36,8 +35,10 @@ $stack-view__min-height: 82px;
 }
 
 .stack-view__content {
-  height: 72vh;
+  height: auto;
   position: relative;
+  flex-grow: 1;
+  overflow-x: scroll;
 }
 
 .stack-view__animation-wrapper {
@@ -77,7 +78,6 @@ $stack-view__min-height: 82px;
 
 .stack-view__parent-note {
   margin: 0;
-  height: $stack-view__parent-note-height;
   min-height: calc($stack-view__min-height * 2);
   width: calc(100vw - 3 * $column__border-width);
   max-width: 700px;
